--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,6 @@ test:
 
 production:
   <<: *default
-  database: sample_app_production
-  username: sample_app
-  password: <%= ENV['SAMPLE_APP_DATABASE_PASSWORD'] %>
+  database: inventos_app_production
+  username: inventos_app
+  password: <%= ENV['INVENTOS_APP_DATABASE_PASSWORD'] %>
